tests/baselines/reference/propertyAccessibility2.errors.txt
==== tests/cases/compiler/propertyAccessibility2.ts (1 errors) ====
    class C {
      private static x = 1;
    }
    var c = C.x;
            ~~~
!!! error TS2341: Property 'C.x' is inaccessible.
    